@startuml ER Diagramm

' hide the spot
hide circle

' evtl. Prbleme mit Kraehenfuessen vermeiden
skinparam linetype ortho

entity "Haustier" {
  * id: integer <<generated>>
  --
  * version: integer
  * name: text
  * alter: number
  * art: text
  * gewicht: number
  * groesse: number
  * vermittelt: boolean
    aufnahmedatum: date
    rasse: text
    schlagwoerter: text
  * erzeugt: timestamp
  * aktualisiert: timestamp
}

entity "Beschreibung" {
  * id: integer <<generated>>
  --
  * beschreibung: text
    haltungshinweise: text
    **haustier_id**: integer <<FK>>
}

entity "Foto" {
  * id: integer <<generated>>
  --
  * beschriftung: text
    contentType: text
  * **haustier_id**: integer <<FK>>
}

entity "HaustierFile" {
  * id: integer <<generated>>
  --
  * filename: text
    mimeType: text
    **haustier_id**: integer <<FK>>
    data: bytea
}

Haustier ||..|| Beschreibung
Haustier ||..o{ Foto
Haustier ||..o| HaustierFile

footer (c) Alisa Ganter

@enduml
